edit "contact", "about us"

--- a/themes/hugo-universal-theme/layouts/partials/breadcrumbs.html
+++ b/themes/hugo-universal-theme/layouts/partials/breadcrumbs.html
@@ -1,4 +1,4 @@
-<div id="heading-breadcrumbs">
+<div id="heading-breadcrumbs-custom" style="background-image: url('../img/carousel/jumbo1.jpeg');">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
