--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -186,3 +186,33 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+#heading-breadcrumbs-custom {
+  padding: 20px 0;
+  margin-bottom: 40px;
+
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+#heading-breadcrumbs-custom.no-mb {
+  margin-bottom: 0;
+}
+#heading-breadcrumbs-custom h1 {
+  color: #333333;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 0.08em;
+}
+@media (max-width: 991px) {
+  #heading-breadcrumbs-custom h1 {
+    text-align: center;
+  }
+}
+#heading-breadcrumbs-custom ul.breadcrumb {
+  margin-top: 5px;
+  margin-bottom: 0;
+}
