added netlify scripts

--- a/themes/hugo-universal-theme/layouts/partials/scripts.html
+++ b/themes/hugo-universal-theme/layouts/partials/scripts.html
@@ -17,3 +17,6 @@
 
 <!-- owl carousel -->
 <script src="{{ .Site.BaseURL }}js/owl.carousel.min.js"></script>
+
+<!--- netlify -->
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
