--- a/themes/hugo-universal-theme/layouts/page/single.html
+++ b/themes/hugo-universal-theme/layouts/page/single.html
@@ -50,6 +50,16 @@
     <!-- /#all -->
 
     {{ partial "scripts.html" . }}
-
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
