--- a/themes/hugo-universal-theme/layouts/partials/head.html
+++ b/themes/hugo-universal-theme/layouts/partials/head.html
@@ -65,4 +65,6 @@
   <meta property="og:url" content="{{ .URL }}/" />
   <meta property="og:image" content="{{ .Site.Params.logo }}" />
 
+<!-- netlify -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
