--- a/themes/hugo-universal-theme/layouts/partials/scripts.html
+++ b/themes/hugo-universal-theme/layouts/partials/scripts.html
@@ -19,4 +19,14 @@
 <script src="{{ .Site.BaseURL }}js/owl.carousel.min.js"></script>
 
 <!--- netlify -->
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+</script>
