--- a/themes/hugo-universal-theme/layouts/partials/hero.html
+++ b/themes/hugo-universal-theme/layouts/partials/hero.html
@@ -1,7 +1,7 @@
 {{ if isset .Site.Params "hero" }}
 {{ if .Site.Params.hero.enable }}
 
-<section class="bar background-image hero" style="height: {{.Site.Params.hero.height}}px;">
+<section class="hero bar background-image" style="height: {{.Site.Params.hero.height}}px;">
     <div class="container" style="background-image: url('{{.Site.Params.hero.image}}');">
             <h1 class="text-uppercase accent">Pyhsiopraxis Hardtke</h1>
             <h3 class="text-uppercase accent">Ihre Pyhsiopraxis in Bonn</h3>
