--- a/themes/hugo-universal-theme/layouts/_default/single.html
+++ b/themes/hugo-universal-theme/layouts/_default/single.html
@@ -26,6 +26,8 @@
 
                         <p class="text-muted text-uppercase mb-small text-right">{{ if .Params.author }}{{ i18n "authorBy" }} <a href="#">{{ .Params.author }}</a> | {{ end }}{{ .Date.Format .Site.Params.date_format }}</p>
 
+                        <img class="img-responsive" src="{{ .Params.banner }}" alt="">
+
                         <div id="post-content">
                           {{ .Content }}
                         </div>
