--- a/themes/hugo-universal-theme/layouts/partials/head.html
+++ b/themes/hugo-universal-theme/layouts/partials/head.html
@@ -50,8 +50,8 @@
   ` | safeHTML }}
 
   <!-- Favicon and apple touch icons-->
-  <link rel="shortcut icon" href="{{ "img/favicon.ico" | relURL }}" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="{{ "img/apple-touch-icon.png" | relURL }}" />
+  <link rel="shortcut icon" href="{{ .Site.Params.favicon | relURL }}" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="{{ .Site.Params.touchicon | relURL }}" />
   <!-- owl carousel css -->
 
   <link href="{{ "css/owl.carousel.css" | relURL}}" rel="stylesheet">
